Accordion Programs Grid - Fix program title cutoff issue

--- a/scss/components/program.scss
+++ b/scss/components/program.scss
@@ -185,22 +185,14 @@
     margin-bottom: 1.5rem;
 
     header {
-      padding: 0;
+      padding: 1.5rem 1.5rem 0.5rem;
+      border-top: 5px solid $tertiary;
+      transition: 0.2s ease-out;
       background-color: white;
     }
 
     .type {
-      font-size: 0;
-      margin: 0;
-      border-color: $tertiary;
-      transition: 0.2s ease-out;
-
-      .icon { display: none; }
-    }
-
-    .heading {
-      padding: rem-calc(20);
-      margin-bottom: 0 !important;
+      display: none;
     }
 
     @include media-breakpoint-up(lg) {
@@ -213,9 +205,8 @@
 
     &:hover,
     &:focus {
-      .type {
-        transform: translateY(-5px);
-        opacity: 0;
+      .header {
+        border-top-color: white;
       }
     }
   }
